--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@
                 </div>
                 
                 <div class="row">
-                    <span>L</span>
-                    <span>E</span>
-                    <span>D</span>
-                    <span>Y</span>
+                    <span>F</span>
+                    <span>I</span>
+                    <span>T</span>
+                    <span>R</span>
+                    <span>I</span>
                     <span> </span>
-                    <span>Y</span>
-                    <span>O</span>
+                    <span>W</span>
+                    <span>U</span>
                     <span>L</span>
                     <span>A</span>
                     <span>N</span>
                     <span>D</span>
                     <span>A</span>
+                    <span>R</span>
+                    <span>I</span>
                 </div>
                 <P></P>
                 <div class="row">
