--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>BUAT YOLA!</title>
+        <title>BUAT FITRI!</title>
         
         <!-- Link CSS Style.css file-->
         
