--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <span>L</span>
                     <span>I</span>
                     <span>A</span>
-                    <span> /span>
+                    <span> </span>
                     <span>P/span>
                     <span>A</span>
                     <span>R</span>
