--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <span>I</span>
                     <span>A</span>
                     <span> </span>
-                    <span>P/span>
+                    <span>P</span>
                     <span>A</span>
                     <span>R</span>
                     <span>A</span>
