--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
                 </div>
                 <P></P>
                 <div class="row">
-                    <span>S</span>
-                    <span>E</span>
-                    <span>M</span>
+                    <span>C</span>
+                    <span>A</span>
+                    <span>N</span>
+                    <span>D</span>
+                    <span>U</span>
+                    <span> </span>
                     <span>O</span>
+                    <span>L</span>
+                    <span>A</span>
+                    <span>H</span>
+                    <span>R</span>
+                    <span>A</span>
                     <span>G</span>
                     <span>A</span>
                     <span> </span>
-                    <span>S</span>
-                    <span>E</span>
-                    <span>H</span>
+                    <span>Y</span>
                     <span>A</span>
-                    <span>T</span>
-                    <span> </span>
-                    <span>S</span>
-                    <span>E</span>
-                    <span>L</span>
                     <span>A</span>
-                    <span>L</span>
-                    <span>U</span>
+                    <span>:)</span>
                 </div>
                 <div class="row">
                     <span>W</span>
